--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -100,7 +100,7 @@
                 <td>
                     <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="BAORUHAIGUANUSERNAME">报入海关人:</label>
@@ -151,7 +151,7 @@
                 <td>
                     <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
@@ -171,7 +171,7 @@
                 <td>
                     <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
@@ -196,6 +196,10 @@
                 <td>
                     <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
                     <input class="easyui-textbox " type="text" id="SHIWUFANGXINGUSERNAME" name="SHIWUFANGXINGUSERNAME" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="DECLSTATUS"> 报关状态:</label>
+                    <input class="easyui-textbox" type="text" name="DECLSTATUS" id="DECLSTATUS" />
                 </td>
             </tr>
             <tr>
