--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -53,7 +53,7 @@
                 <td>
                     <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="BAORUHAIGUANUSERNAME">报入海关人:</label>
@@ -104,7 +104,7 @@
                 <td>
                     <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
@@ -124,7 +124,7 @@
                 <td>
                     <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
@@ -163,6 +163,10 @@
                     <label for="IFYIJIAO">是否移交:</label>
                     <input class="" id="IFYIJIAO" type="checkbox" name="IFYIJIAO" value="1" />
                 </td>
+                <td>
+                    <label for="DECLSTATUS"> 报关状态:</label>
+                    <input class="easyui-textbox" type="text" name="DECLSTATUS" id="DECLSTATUS" />
+                </td>
             </tr>
             <tr>
 
@@ -180,7 +184,7 @@
                     <input class="" id="KOUHUOSIGN" type="checkbox" name="KOUHUOSIGN" value="1" />
                 </td>
                 <td>
-                    <label for="KOUHUOTIME" style="width:100px;">扣货时间:</label>
+                    <label for="KOUHUOTIME">扣货时间:</label>
                     <input class="easyui-datebox value" name="KOUHUOTIME" placeholder="开始时间">
                 </td>
             </tr>
