--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -53,6 +53,7 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'BUSIUNITNAME',sortable:true,">收货人</th>
                     <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'text',sortable:true">报检单号</th>
                     <th data-options="field:'INSPSTATUS',sortable:true">报检状态</th>
                     <th data-options="field:'DECLSTATUS',sortable:true">报关状态</th>
                 </tr>
