--- a/Views/Common/Attachment_Edit.cshtml
+++ b/Views/Common/Attachment_Edit.cshtml
@@ -1,9 +1,7 @@
 ﻿@{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -29,9 +27,28 @@
     </style>
     <script type="text/javascript">
         var file_store;
+
+
+
         Ext.onReady(function () {
+
+ 
+
+
+            var FWONO = $("#FWONO").val();
+            var FOONO = $("#FOONO").val();
+            //var data = Ext.decode();
             file_store = Ext.create('Ext.data.JsonStore', {
                 fields: ['ID', 'FILENAME', 'FILEPATH', 'CREATETIME', 'SIZES', 'IETYPE'],
+                proxy: {
+                    type: 'ajax',
+                    url: '/Common/load_file?FWONO=' + FWONO + '&FOONO=' + FOONO,
+                    reader: {
+                        root: 'rows',
+                        type: 'json'
+                    }
+                },
+                autoLoad: true,
                 listeners: {
                     datachanged: function (sf_1, eOpts) {
                         //if (file_store.data.length > 0 && Ext.getCmp('field_STATUS').getValue() == 1) {
@@ -69,12 +86,40 @@
                 items: [fileview]
             })
             upload_ini();
+
+
+            //load_file();
+
         })
+
+
+        //function load_file() {
+
+        //    $.ajax({
+        //        url: '/Common/load_file',// 跳转到 action
+        //        data: {
+        //            'FWONO': FWONO,
+        //            'FOONO': FOONO
+        //        },
+        //        type: 'post',
+        //        dataType: 'json',
+        //        success: function (data) {
+        //            var i = 0;
+        //            for (i; i < data.length; i++) {
+        //                file_store.insert(file_store.data.length,
+        //                  { ID: data[i].ID, FILEPATH: data[i].FILEPATH, FILENAME: data[i].FILENAME, SIZES: data[i].SIZES, CREATETIME: data[i].CREATETIME });
+        //            }
+        //        }
+        //    });
+        //}
+
         function upload_ini() {
+            var FWONO = $("#FWONO").val();
+            var FOONO = $("#FOONO").val();
             uploader = new plupload.Uploader({
                 runtimes: 'html5,flash,silverlight,html4',
                 browse_button: 'pickfiles', // you can pass an id...
-                url: '/Common/UploadFile',
+                url: '/Common/UploadFile?FWONO=' + FWONO + "&FOONO=" + FOONO,
                 flash_swf_url: '/js/upload/Moxie.swf',
                 silverlight_xap_url: '/js/upload/Moxie.xap',
                 unique_names: true,
@@ -91,35 +136,54 @@
                 uploader.start();
             });
             uploader.bind('FileUploaded', function (up, file) {
-
+                file_store.load();
+                //load_file();
+                //window.load();
                 //var filetype = Ext.getCmp('combo_filetype').getValue();
                 //var filetypename = Ext.getCmp('combo_filetype').getRawValue();
 
-                var timestamp = Ext.Date.now();  //1351666679575  这个方法只是获取的时间戳
-                var date = new Date(timestamp);
-                file_store.insert(file_store.data.length,
-               { FILEPATH: '/Upload/' + file.target_name, FILENAME: file.target_name, SIZES: file.size, CREATETIME: Ext.Date.format(date, 'Y-m-d H:i:s') });
+                // var timestamp = Ext.Date.now();  //1351666679575  这个方法只是获取的时间戳
+                // var date = new Date(timestamp);
+                // file_store.insert(file_store.data.length,
+                //{ FILEPATH: '/Upload/' + file.target_name, FILENAME: file.name, SIZES: file.size, CREATETIME: Ext.Date.format(date, 'Y-m-d H:i:s') });
             });
         }
+
+        function deletefile() {
+            debugger;
+            var w_fileview = Ext.getCmp("w_fileview");
+            var recs = w_fileview.getSelectionModel().getSelection();
+            recs[0].get("ID")
+            }
+        
+
+
     </script>
 </head>
 <body>
     <div class="container" style="width:540px">
-        <div class="input-group" style="width:100%;margin:10px 0px">
-            <span class="input-group-addon" style="width:120px">FWO订单号</span>
-            <input type="text" class="form-control" placeholder="twitterhandle">
-        </div>
-        <div class="input-group" style="width: 100%; margin: 10px 0px">
-            <span class="input-group-addon" style="width:120px">FOO指令服务号</span>
-            <input type="text" class="form-control">
-        </div>
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-primary btn-sm" id="pickfiles"><i class="fa fa-upload"></i>&nbsp;上传文件</button>
-            <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-exchange fa-fw"></i>&nbsp;浏览文件</button>
-            <button type="button" class="btn btn-primary btn-sm" id="deletefile"><i class="fa fa-trash-o"></i>&nbsp;删除文件</button>
-        </div>
-        <div id="div_panel">
-        </div>
+        @if (ViewData["is_passed"] == "1")
+        {
+            <div class="input-group" style="width:100%;margin:10px 0px">
+                <span class="input-group-addon" style="width:120px">FWO订单号</span>
+                <input type="text" class="form-control" placeholder="twitterhandle" value="@ViewData["FWONO"]" id="FWONO" readonly="readonly">
+            </div>
+            <div class="input-group" style="width: 100%; margin: 10px 0px">
+                <span class="input-group-addon" style="width:120px">FOO指令服务号</span>
+                <input type="text" class="form-control" value="@ViewData["FOONO"]" id="FOONO" readonly="readonly">
+            </div>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-primary btn-sm" id="pickfiles"><i class="fa fa-upload"></i>&nbsp;上传文件</button>
+                <button type="button" class="btn btn-primary btn-sm"  ><i class="fa fa-exchange fa-fw"></i>&nbsp;浏览文件</button>
+                <button type="button" class="btn btn-primary btn-sm" onclick="deletefile()"><i class="fa fa-trash-o"></i>&nbsp;删除文件</button>
+            </div>
+            <div id="div_panel">
+            </div>
+        }
+        else
+        {
+            <h1>参数异常</h1>
+        }
     </div>
 </body>
 </html>
