--- a/Views/Common/Attachment_List.cshtml
+++ b/Views/Common/Attachment_List.cshtml
@@ -59,7 +59,7 @@
             listeners:
             {
                 'itemdblclick': function (view, record, item, index, e) {
-                    window.open("/Common/Attachment_Edit?FWONO=" + record.data.FWONO + "&FOONO=" + record.data.FOONO, '', 'width=1000,height=600');
+                    window.open("/Common/Attachment_Edit?FWONO=" + record.data.FWONO + "&FOONO=" + record.data.FOONO, '');
                     //opencenterwin("/Common/Attachment_Edit?FWONO=" + record.data.FWONO + "&FOONO=" + record.data.FOONO, 1000, 600);
                 }
             },
