--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                         <li><a href="#">用户管理</a></li>
                         <li><a href="#">模块管理</a></li>
                         <li><a href="#">权限管理</a></li>
-                        <li><a href="#">同步日志</a></li>
+                        <li><a href="/Common/SyncFoo_List">同步日志</a></li>
                         <li><a href="/Common/Attachment_List">随附文件</a></li>
                     </ul>
                 </li>
