--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -52,35 +52,35 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true,">收货人</th>
-                    <th data-options="field:'text',sortable:true">报关单号</th>
-                    <th data-options="field:'text',sortable:true">海关通关状态</th>
-                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'BUSIUNITNAME',width:80,sortable:true,">收货人</th>
+                    <th data-options="field:'text',width:80,sortable:true">报关单号</th>
+                    <th data-options="field:'text',width:80,sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',width:80,sortable:true">关务状态</th>
                 </tr>
             </thead>
             <thead>
                 <tr>
-                    <th data-options="field:'FIRSTLADINGBILLNO',sortable:true">一程提运单号</th>
-                    <th data-options="field:'SECONDLADINGBILLNO',sortable:true">二程提运单号</th>
-                    <th data-options="field:'TOTALNO',sortable:true">总单号</th>
-                    <th data-options="field:'DIVIDENO',sortable:true">分单号</th>
-                    <th data-options="field:'text',sortable:true">万达号</th>
-                    <th data-options="field:'MANIFEST',sortable:true">载货清单号</th>
-                    <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
-                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
-                    <th data-options="field:'TURNPRENO',sortable:true">转关预录号</th>
-                    <th data-options="field:'GUANWUJIESHOUTIME',sortable:true">关务接受时间</th>
-                    <th data-options="field:'BAORUHAIGUANTIME',sortable:true">报入海关时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
-                    <th data-options="field:'FWONO',sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOCUSTOMSNO',sortable:true">FO号</th>
-                    <th data-options="field:'CODE',sortable:true">业务编号</th>
-                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
-                    <th data-options="field:'LAWCONDITION',sortable:true">是否法检</th>
+                    <th data-options="field:'FIRSTLADINGBILLNO',width:80,sortable:true">一程提运单号</th>
+                    <th data-options="field:'SECONDLADINGBILLNO',width:80,sortable:true">二程提运单号</th>
+                    <th data-options="field:'TOTALNO',width:100,sortable:true">总单号</th>
+                    <th data-options="field:'DIVIDENO',width:80,sortable:true">分单号</th>
+                    <th data-options="field:'text',width:80,sortable:true">万达号</th>
+                    <th data-options="field:'MANIFEST',width:80,sortable:true">载货清单号</th>
+                    <th data-options="field:'GOODSNUM',width:80,sortable:true">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',width:80,sortable:true">总重量</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',width:80,sortable:true">贸易方式</th>
+                    <th data-options="field:'TURNPRENO',width:80,sortable:true">转关预录号</th>
+                    <th data-options="field:'GUANWUJIESHOUTIME',width:100,sortable:true">关务接受时间</th>
+                    <th data-options="field:'BAORUHAIGUANTIME',width:100,sortable:true">报入海关时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGTIME',width:100,sortable:true">单证放行时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',width:80,sortable:true">实物放行时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:80,sortable:true">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:80,sortable:true">实物放行人</th>
+                    <th data-options="field:'FWONO',width:80,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOCUSTOMSNO',width:80,sortable:true">FO号</th>
+                    <th data-options="field:'CODE',width:80,sortable:true">业务编号</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',width:80,sortable:true">关区代码</th>
+                    <th data-options="field:'LAWCONDITION',width:80,sortable:true">是否法检</th>
                 </tr>
             </thead>
         </table>
