update oneline in

--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -48,7 +48,7 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="一线进口" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{TYPE:'ONEIN'}">
+               data-options="queryParams:{BUSITYPE:'ONEIN'}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
