update one line out

--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -46,34 +46,34 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="一线出口" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{BUSITYPE:11}">
+               data-options="queryParams:{BUSITYPE:'ONEOUT'}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'SFGOODSUNIT',sortable:true,">发货人</th>
-                    <th data-options="field:'text',sortable:true">报关单号</th>
-                    <th data-options="field:'text',sortable:true">海关通关状态</th>
-                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'text',width:100,sortable:true">报关单号</th>
+                    <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',width:100,sortable:true">关务状态</th>
 
                 </tr>
             </thead>
             <thead>
                 <tr>
-                    <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
-                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
-                    <th data-options="field:'TURNPRENO',sortable:true">转关预录号</th>
-                    <th data-options="field:'GUANWUJIESHOUTIME',sortable:true">关务接受时间</th>
-                    <th data-options="field:'BAORUHAIGUANTIME',sortable:true">报入海关时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
-                    <th data-options="field:'SHIWUJIAFENGTIME',sortable:true">实物加封时间</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
-                    <th data-options="field:'FWONO',sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOCUSTOMSNO',sortable:true">FO号</th>
-                    <th data-options="field:'CODE',sortable:true">业务编号</th>
-                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
+                    <th data-options="field:'GOODSNUM',width:100,sortable:true">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">总重量</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',width:100,sortable:true">贸易方式</th>
+                    <th data-options="field:'TURNPRENO',width:100,sortable:true">转关预录号</th>
+                    <th data-options="field:'GUANWUJIESHOUTIME',width:100,sortable:true">关务接受时间</th>
+                    <th data-options="field:'BAORUHAIGUANTIME',width:100,sortable:true">报入海关时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGTIME',width:100,sortable:true">单证放行时间</th>
+                    <th data-options="field:'SHIWUJIAFENGTIME',width:100,sortable:true">实物加封时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',width:100,sortable:true">实物放行时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,sortable:true">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
+                    <th data-options="field:'FWONO',width:100,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOCUSTOMSNO',width:100,sortable:true">FO号</th>
+                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',width:100,sortable:true">关区代码</th>
                 </tr>
             </thead>
         </table>
