--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -40,7 +40,7 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="结转BLC" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{BUSITYPE:11}">
+               data-options="queryParams:{BUSITYPE:'BLC'}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
@@ -67,8 +67,9 @@
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
-                    <th data-options="field:'FWONO',sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOCUSTOMSNO',sortable:true">FO号</th>
+                    <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
+                    <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
                     <th data-options="field:'CODE',sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
                 </tr>
