--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -76,8 +76,9 @@
                     <th data-options="field:'SHIWUFANGXINGTIME',width:80,sortable:true">实物放行时间</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:80,sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:80,sortable:true">实物放行人</th>
-                    <th data-options="field:'FWONO',width:80,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOCUSTOMSNO',width:80,sortable:true">FO号</th>
+                    <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
+                    <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
                     <th data-options="field:'CODE',width:80,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:80,sortable:true">关区代码</th>
                     <th data-options="field:'LAWCONDITION',width:80,sortable:true">是否法检</th>
