--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -50,7 +50,7 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'SFGOODSUNIT',sortable:true,">发货人</th>
+                    <th data-options="field:'SFGOODSUNIT',width:150,sortable:true,">发货人</th>
                     <th data-options="field:'text',width:100,sortable:true">报关单号</th>
                     <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:100,sortable:true">关务状态</th>
@@ -70,8 +70,9 @@
                     <th data-options="field:'SHIWUFANGXINGTIME',width:100,sortable:true">实物放行时间</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
-                    <th data-options="field:'FWONO',width:100,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOCUSTOMSNO',width:100,sortable:true">FO号</th>
+                    <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
+                    <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
                     <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:100,sortable:true">关区代码</th>
                 </tr>
