--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -42,12 +42,12 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="特殊监管" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{BUSITYPE:11}">
+               data-options="queryParams:{BUSITYPE:'SPECIAL'}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'SFGOODSUNIT',sortable:true">收/发货人</th>
-                    <th data-options="field:'text',sortable:true">报关单号</th>
+                    <th data-options="field:'text',width:80,sortable:true">报关单号</th>
                     <th data-options="field:'text',sortable:true">海关通关状态</th>
                     <th data-options="field:'text',sortable:true">关务状态</th>
                 </tr>
@@ -64,8 +64,9 @@
                     <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
-                    <th data-options="field:'FWONO',sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOCUSTOMSNO',sortable:true">FO号</th>
+                    <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
+                    <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
                     <th data-options="field:'CODE',sortable:true">业务编号</th>
                     <th data-options="field:'INOUTTYPE',sortable:true">进出口类别</th>
                     <th data-options="field:'REPWAYID',sortable:true">申报方式</th>
