--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -247,6 +247,10 @@
                     <input class="easyui-numberspinner" name="TIAODANGTIMES"
                            data-options="min:0">
                 </td>
+                <td>
+                    <label for="JGCZCBH"> 监管仓暂存号:</label>
+                    <input class="easyui-textbox" type="text" name="JGCZCBH" id="JGCZCBH" />
+                </td>
             </tr>
         </table>
     </div>
