--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -201,6 +201,10 @@
                     <label for="DECLSTATUS"> 报关状态:</label>
                     <input class="easyui-textbox" type="text" name="DECLSTATUS" id="DECLSTATUS" />
                 </td>
+                <td>
+                    <label for="JGCZCBH"> 监管仓暂存号:</label>
+                    <input class="easyui-textbox" type="text" name="JGCZCBH" id="JGCZCBH" />
+                </td>
             </tr>
             <tr>
                 <td>
@@ -242,6 +246,7 @@
                     <label for="SHANDANDESC">删单备注:</label>
                     <input class="easyui-textbox" type="text" name="SHANDANDESC" />
                 </td>
+
             </tr>
             <tr>
                 <td style="text-align:left">
