--- a/Views/Declare/OnelineOut_Edit.cshtml
+++ b/Views/Declare/OnelineOut_Edit.cshtml
@@ -276,6 +276,10 @@
                     <label for="KOUHUOTIME" style="width:100px;">扣货时间:</label>
                     <input class="easyui-datebox value" name="KOUHUOTIME" placeholder="开始时间">
                 </td>*@
+                <td>
+                    <label for="JGCZCBH"> 监管仓暂存号:</label>
+                    <input class="easyui-textbox" type="text" name="JGCZCBH" id="JGCZCBH" />
+                </td>
             </tr>
         </table>
     </div>
