--- a/Views/Declare/SpecialSupervision_Edit.cshtml
+++ b/Views/Declare/SpecialSupervision_Edit.cshtml
@@ -175,6 +175,10 @@
                     <label for="DECLSTATUS"> 报关状态:</label>
                     <input class="easyui-textbox" type="text" name="DECLSTATUS" id="DECLSTATUS" />
                 </td>
+                <td>
+                    <label for="JGCZCBH"> 监管仓暂存号:</label>
+                    <input class="easyui-textbox" type="text" name="JGCZCBH" id="JGCZCBH" />
+                </td>
             </tr>
             <tr>
                 <td>
