--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -81,19 +81,6 @@
                     <table>
                         <tr>
                             <td class="search_margin">
-                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value" type="text" name="ordercode_value" />
-                            </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value" type="text" name="oprname_value" />
-                            </td>
-                            <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>业务方式</option>
                                 </select>
@@ -102,13 +89,27 @@
                                 <select class="easyui-combobox combobox_width value" id="service_model" panelheight="auto" name="service_model"></select>
                             </td>
                             <td class="search_margin">
+                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
+                            </td>
+
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="oprname_value" placeholder="操作人" />
+                            </td>
+
+                            <td class="search_margin">
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
                             </td>
                             <td>
-                                <input class="easyui-datebox value" name="startdate" placeholder="开始时间">
+                                <input class="easyui-datebox value placeholderclass" name="startdate" placeholder="开始时间">
                             </td>
                             <td>
-                                <input class="easyui-datebox value" name="stopdate" placeholder="结束时间">
+                                <input class="easyui-datebox value placeholderclass" name="stopdate" placeholder="结束时间">
                             </td>
                         </tr>
                         <tr>
