--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -43,7 +43,14 @@
             valueField: 'code',
             textField: 'name'
         });
+
     })
+
+
+    /**
+    easyui number placeholder
+    */
+
 </script>
 <div class="ibox-content">
     <div class="table-responsive">
@@ -102,23 +109,23 @@
                                 <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
                             </td>
                             <td>
-                                <input class="easyui-textbox value" type="text" name="ordercode_value" />
+                                <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
                             </td>
 
                             <td class="search_margin">
-                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
+                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname" ></select>
                             </td>
                             <td>
-                                <input class="easyui-textbox value" type="text" name="oprname_value" />
+                                <input class="easyui-textbox value placeholderclass" type="text" name="oprname_value" placeholder="操作人" />
                             </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
                             </td>
                             <td>
-                                <input class="easyui-datebox value" name="startdate" placeholder="开始时间">
+                                <input class="easyui-datebox value  placeholderclass" name="startdate" placeholder="开始时间">
                             </td>
                             <td>
-                                <input class="easyui-datebox value" name="stopdate" placeholder="结束时间">
+                                <input class="easyui-datebox value  placeholderclass" name="stopdate" placeholder="结束时间">
                             </td>
                         </tr>
                         <tr>
