--- a/Views/Inspect/DomesticKnot_List.cshtml
+++ b/Views/Inspect/DomesticKnot_List.cshtml
@@ -119,6 +119,25 @@
                                 <select class="easyui-combobox combobox_width value" id="service_model" panelheight="auto" name="service_model"></select>
                             </td>
 
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value placeholderclass" type="text" name="ordercode_value" placeholder="单据号" />
+                            </td>
+
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value placeholderclass" name="startdate" placeholder="开始时间">
+                            </td>
+                            <td>
+                                <input class="easyui-datebox value placeholderclass" name="stopdate" placeholder="结束时间">
+                            </td>
+                        </tr>
+
+                        <tr>
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -129,25 +148,6 @@
                                 <select class="easyui-combobox combobox_width value" id="out_in" panelheight="auto" name="out_in"></select>
                             </td>
 
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-datebox value" name="startdate" placeholder="开始时间">
-                            </td>
-                            <td>
-                                <input class="easyui-datebox value" name="stopdate" placeholder="结束时间">
-                            </td>
-                        </tr>
-
-                        <tr>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value" type="text" name="ordercode_value" />
-                            </td>
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
